--- a/public/assets/views/hmo/clients-partials/enrollee/premiums.html
+++ b/public/assets/views/hmo/clients-partials/enrollee/premiums.html
@@ -9,7 +9,7 @@
                 <div class="panel-body">
                     <div class="row">
                         <div class="pricing-table pricing-green">
-                            <div class="col-lg-3 col-md-3 col-sm-6 hvr-grow-shadow" ng-mouseover="hoverIn($event)"  ng-mouseleave="hoverOut($event)" data-id="plan1" >
+                            <div class="col-lg-3 col-md-3 col-sm-6 hvr-grow-shadow" data-id="plan1" >
                                 <ul class="plan plan2">
                                     <li class="plan-name">
                                         Gold
@@ -29,7 +29,7 @@
                         </div>
 
                         <div class="pricing-table pricing-green">
-                            <div class="col-lg-3 col-md-3 col-sm-6 hvr-grow-shadow" ng-mouseover="hoverIn($event)"  ng-mouseleave="hoverOut($event)" data-id="plan2">
+                            <div class="col-lg-3 col-md-3 col-sm-6 hvr-grow-shadow"  data-id="plan2">
                                 <ul class="plan plan2">
                                     <li class="plan-name">
                                         Gold
@@ -49,7 +49,7 @@
                         </div>
 
                         <div class="pricing-table pricing-red">
-                            <div class="col-lg-3 col-md-3 col-sm-6 hvr-grow-shadow" ng-mouseover="hoverIn($event)"  ng-mouseleave="hoverOut($event)" data-id="plan2">
+                            <div class="col-lg-3 col-md-3 col-sm-6 hvr-grow-shadow"  data-id="plan2">
                                 <ul class="plan plan2">
                                     <li class="plan-name">
                                         Gold
@@ -72,7 +72,7 @@
                         </div>
 
                         <div class="pricing-table pricing-green">
-                            <div class="col-lg-3 col-md-3 col-sm-6 hvr-grow-shadow" ng-mouseover="hoverIn($event)"  ng-mouseleave="hoverOut($event)" data-id="plan2">
+                            <div class="col-lg-3 col-md-3 col-sm-6 hvr-grow-shadow"  data-id="plan2">
                                 <ul class="plan plan2">
                                     <li class="plan-name">
                                         Diamond
@@ -94,7 +94,7 @@
 
                     <div class="row">
                         <div class="pricing-table pricing-green">
-                            <div class="col-lg-3 col-md-3 col-sm-6 hvr-grow-shadow" ng-mouseover="hoverIn($event)"  ng-mouseleave="hoverOut($event)" data-id="plan2">
+                            <div class="col-lg-3 col-md-3 col-sm-6 hvr-grow-shadow" data-id="plan2">
                                 <ul class="plan plan2">
                                     <li class="plan-name">
                                         Diamond
