--- a/public/assets/views/hmo/clients-partials/org/claims.html
+++ b/public/assets/views/hmo/clients-partials/org/claims.html
@@ -17,7 +17,7 @@
                                 </p>
                                 <div >
                                     <div class="text-center margin-bottom-15">
-                                        <canvas ng-if="renderChart" class="chart chart-doughnut" chart-data="data" chart-options="options" chart-labels="labels" chart-series="series" chart-colours="colors" chart-legend="true"></canvas>
+                                        <canvas ng-if="renderChartOrg" class="chart chart-doughnut" chart-data="data" chart-options="options" chart-labels="labels" chart-series="series" chart-colours="colors" chart-legend="true"></canvas>
                                     </div>
                                 </div>
                             </div>
