--- a/public/assets/views/hmo/organization.html
+++ b/public/assets/views/hmo/organization.html
@@ -1,6 +1,6 @@
 <!-- start: BREADCRUMB -->
 <div class="breadcrumb-wrapper">
-    <h4 class="mainTitle no-margin">MTN Africa Profile</h4><small><span class="label label-danger"><small>organization</small></span></small>
+    <h4 class="mainTitle no-margin"><strong><span class="text-super-large text-muted">MTN Africa Profile</span></strong></h4><small><span class="label label-danger"><small>organization</small></span></small>
 
     <div ncy-breadcrumb class="pull-right"></div>
 </div>
@@ -24,6 +24,7 @@
                     <!-- end: TAB EDIT ACCOUNT -->
                     <!-- start: TAB PROJECTS -->
                     <uib-tab heading="Claims">
+                        <ng-include src=" 'assets/views/hmo/clients-partials/org/claims.html' "></ng-include>
                     </uib-tab>
 
                     <uib-tab heading="Enrollee">
