--- a/public/assets/views/hmo/clients-partials/org/premiums.html
+++ b/public/assets/views/hmo/clients-partials/org/premiums.html
@@ -2,20 +2,26 @@
     <div class="row">
         <div class="col-md-12">
             <div class="panel panel-white">
+                <div class="panel-heading border-light">
+                    <h4 class="panel-title text-primary">
+                        <span class="label label-success pull-right" style="font-size: 14px !important;">Joined 12-09-2016</span>
+                    </h4>
+                    <paneltool class="panel-tools" tool-collapse="tool-collapse" tool-refresh="load1" tool-dismiss="tool-dismiss"></paneltool>
+                </div>
                 <div class="panel-body">
                     <div class="row">
                         <div class="pricing-table pricing-green">
-                            <div class="col-lg-3 col-md-3 col-sm-6" ng-mouseover="hoverIn($event)"  ng-mouseleave="hoverOut($event)" data-id="plan1">
+                            <div class="col-lg-3 col-md-3 col-sm-6  hvr-grow-shadow" data-id="plan1">
                                 <ul class="plan plan2">
                                     <li class="plan-name">
                                         Gold
                                         <span class="label label-success" style="font-size: 10px !important;">active</span>
                                     </li>
                                     <li class="plan-price">
-                                        <h3> $5000 <span class="price-cents">00</span><span class="price-month">/month</span></h3>
+                                        <h3> N 5000 <span class="price-cents">00</span><span class="price-month">/month</span></h3>
                                     </li>
                                     <li>
-                                        <strong>Joined</strong> 12-09-2015
+                                        <strong>Paid For</strong> 200 Enrollees
                                     </li>
                                     <li class="plan-action">
                                         <a href="#" class="btn btn-success btn-lg"> May, 2016 </a>
@@ -25,37 +31,37 @@
                         </div>
 
                         <div class="pricing-table pricing-green">
-                            <div class="col-lg-3 col-md-3 col-sm-6" ng-mouseover="hoverIn($event)"  ng-mouseleave="hoverOut($event)" data-id="plan2">
+                            <div class="col-lg-3 col-md-3 col-sm-6  hvr-grow-shadow" data-id="plan2">
                                 <ul class="plan plan2">
                                     <li class="plan-name">
                                         Gold
                                         <span class="label label-success" style="font-size: 10px !important;">active</span>
                                     </li>
                                     <li class="plan-price">
-                                        <h3> $5000 <span class="price-cents">00</span><span class="price-month">/month</span></h3>
+                                        <h3> N 5000 <span class="price-cents">00</span><span class="price-month">/month</span></h3>
                                     </li>
                                     <li>
-                                        <strong>Joined</strong> 12-09-2015
+                                        <strong>Paid For</strong> 200 Enrollees
                                     </li>
                                     <li class="plan-action">
-                                        <a href="#" class="btn btn-success btn-lg"> June, 2016 </a>
+                                        <a href="#" class="btn btn-success btn-lg  hvr-grow-shadow"> June, 2016 </a>
                                     </li>
                                 </ul>
                             </div>
                         </div>
 
                         <div class="pricing-table pricing-red">
-                            <div class="col-lg-3 col-md-3 col-sm-6" ng-mouseover="hoverIn($event)"  ng-mouseleave="hoverOut($event)" data-id="plan2">
+                            <div class="col-lg-3 col-md-3 col-sm-6  hvr-grow-shadow"  data-id="plan2">
                                 <ul class="plan plan2">
                                     <li class="plan-name">
                                         Gold
-                                        <span class="label label-danger" style="font-size: 10px !important;">inactive</span>
+                                        <span class="label label-danger " style="font-size: 10px !important;">inactive</span>
                                     </li>
                                     <li class="plan-price">
-                                        <h3> $5000 <span class="price-cents">00</span><span class="price-month">/month</span></h3>
+                                        <h3> N 5000 <span class="price-cents">00</span><span class="price-month">/month</span></h3>
                                     </li>
                                     <li>
-                                        <strong>Joined</strong> 12-09-2015
+                                        <strong>Paid For</strong> 200 Enrollees
                                     </li>
                                     <li>
                                         <strong>Plan Switch:</strong> Diamond
@@ -68,17 +74,17 @@
                         </div>
 
                         <div class="pricing-table pricing-green">
-                            <div class="col-lg-3 col-md-3 col-sm-6" ng-mouseover="hoverIn($event)"  ng-mouseleave="hoverOut($event)" data-id="plan2">
+                            <div class="col-lg-3 col-md-3 col-sm-6 hvr-grow-shadow"  data-id="plan2">
                                 <ul class="plan plan2">
                                     <li class="plan-name">
                                         Diamond
                                         <span class="label label-success" style="font-size: 10px !important;">active</span>
                                     </li>
                                     <li class="plan-price">
-                                        <h3> $5000 <span class="price-cents">00</span><span class="price-month">/month</span></h3>
+                                        <h3>  N 6000 <span class="price-cents">00</span><span class="price-month">/month</span></h3>
                                     </li>
                                     <li>
-                                        <strong>Joined</strong> 12-09-2015
+                                        <strong>Paid For</strong> 200 Enrollees
                                     </li>
                                     <li class="plan-action">
                                         <a href="#" class="btn btn-success btn-lg"> August, 2016 </a>
@@ -90,17 +96,17 @@
 
                     <div class="row">
                         <div class="pricing-table pricing-green">
-                            <div class="col-lg-3 col-md-3 col-sm-6" ng-mouseover="hoverIn($event)"  ng-mouseleave="hoverOut($event)" data-id="plan2">
+                            <div class="col-lg-3 col-md-3 col-sm-6 hvr-grow-shadow" data-id="plan2">
                                 <ul class="plan plan2">
                                     <li class="plan-name">
                                         Diamond
                                         <span class="label label-success" style="font-size: 10px !important;">active</span>
                                     </li>
                                     <li class="plan-price">
-                                        <h3> $5000 <span class="price-cents">00</span><span class="price-month">/month</span></h3>
+                                        <h3> N 6000 <span class="price-cents">00</span><span class="price-month">/month</span></h3>
                                     </li>
                                     <li>
-                                        <strong>Joined</strong> 12-09-2015
+                                        <strong>Paid For</strong> 200 Enrollees
                                     </li>
                                     <li class="plan-action">
                                         <a href="#" class="btn btn-success btn-lg"> September, 2016 </a>
