Fix the home dashboard

--- a/public/assets/views/hmo/clients-partials/staff/overview.html
+++ b/public/assets/views/hmo/clients-partials/staff/overview.html
@@ -50,6 +50,11 @@
                     <td><span class="label label-success">IT Adminstrator</span>
                     </td>
                 </tr>
+                <tr>
+                    <td>Branch</td>
+                    <td><span class="label label-success">Lagos</span>
+                    </td>
+                </tr>
                 </tbody>
             </table>
         </div>
@@ -91,6 +96,19 @@
                                         Role
                                     </label>
                                     <input type="text" placeholder="Title" class="form-control" name="name" value="IT Ad ministrator">
+                                </div>
+
+                                <div class="form-group">
+                                    <label for="form-field-select-2">
+                                        Branch
+                                    </label>
+                                    <select class="cs-select cs-skin-elastic">
+                                        <option value="" disabled >Select a Branh</option>
+                                        <option value="france"  selected>Lagos</option>
+                                        <option value="brazil" >Port Harcout</option>
+                                        <option value="argentina" >Abuja</option>
+                                        <option value="shopping" >Ibadan</option>
+                                    </select>
                                 </div>
 
                             </div>
