--- a/public/assets/views/hmo/staff.html
+++ b/public/assets/views/hmo/staff.html
@@ -17,7 +17,7 @@
                 <div uib-collapse="activities" class="panel-wrapper" active="staffCtrl.tabIndex">
                     <div class="panel-body">
                         <div class="row">
-                            <div class="col-sm-4">
+                            <div class="col-sm-4 hvr-grow-shadow" onclick="location.href='#/staff/info/1';" style="cursor: pointer;">
                                 <div class="panel panel-white panel-carousel dots-left no-border no-radius">
                                     <div class="panel-body no-padding height-200">
                                         <!-- start: CAROUSEL -->
@@ -39,7 +39,7 @@
                                 </div>
                             </div>
 
-                            <div class="col-sm-4">
+                            <div class="col-sm-4 hvr-grow-shadow" onclick="location.href='#/staff/info/1';" style="cursor: pointer;">
                                 <div class="panel panel-white panel-carousel dots-left no-border no-radius">
                                     <div class="panel-body no-padding height-200">
                                         <!-- start: CAROUSEL -->
@@ -61,7 +61,7 @@
                                 </div>
                             </div>
 
-                            <div class="col-sm-4">
+                            <div class="col-sm-4 hvr-grow-shadow" onclick="location.href='#/staff/info/1';" style="cursor: pointer;">
                                 <div class="panel panel-white panel-carousel dots-left no-border no-radius">
                                     <div class="panel-body no-padding height-200">
                                         <!-- start: CAROUSEL -->
