--- a/public/assets/css/styles.css
+++ b/public/assets/css/styles.css
@@ -6184,6 +6184,7 @@ hr.white-line {
   color: #8e8e93;
   border: none;
   position: relative;
+    margin-bottom: 0px !important;
 }
 
 .panel-footer {
