--- a/public/assets/views/hmo/staff-info.html
+++ b/public/assets/views/hmo/staff-info.html
@@ -15,7 +15,11 @@
                     </uib-tab>
 
                     <uib-tab heading="Create">
-                        <ng-include src=" 'assets/views/hmo/clients-partials/staff/create.html' "></ng-include>
+                        <ng-include src=" 'assets/views/hmo/clients-partials/staff/create-staff.html' "></ng-include>
+                    </uib-tab>
+
+                    <uib-tab heading="Activity">
+                        <ng-include src=" 'assets/views/hmo/clients-partials/staff/activity.html' "></ng-include>
                     </uib-tab>
 
 
