settings section WIP

--- a/public/assets/views/hmo/clients-partials/staff/create-staff.html
+++ b/public/assets/views/hmo/clients-partials/staff/create-staff.html
@@ -41,7 +41,7 @@
                                         <option value="brazil" >Accountant</option>
                                         <option value="argentina" >Analyst</option>
                                         <option value="shopping" >MD</option>
-                                        <option value="shopping" >MD</option>
+                                        <option value="shopping" >Customer Care</option>
                                     </select>
                                 </div>
 
