--- a/public/assets/views/hmo/home.html
+++ b/public/assets/views/hmo/home.html
@@ -138,7 +138,7 @@
                 <div class="panel-body panel-dami">
                     <div class="row">
                         <div class="col-sm-6 col-lg-6">
-                            <div class="panel panel-grey no-border no-radius">
+                            <div class="panel panel-grey panel-grey no-border no-radius">
                                 <div class="panel-body no-padding">
                                     <div class="space10 padding-15">
                                         <h5 class="text-bold text-extra-small text-dark-transparent text-uppercase no-margin">Abuja Branch</h5>
