--- a/public/assets/views/partials/hmo/nav-hmo.html
+++ b/public/assets/views/partials/hmo/nav-hmo.html
@@ -80,8 +80,8 @@
         </a>
     </li>
 
-    <li ng-class="{'active open':$state.includes('dashboard.pharmacy')}">
-        <a href="javascript:void(0)">
+    <li ng-class="{'active open':$state.includes('settings')}">
+        <a ui-sref="settings.home">
             <div class="item-content">
                 <div class="item-media">
                     <letter-icon data="{{ 'Settings' | translate }}" char-count="2" size="sm"></letter-icon>
